--- a/_config.yml
+++ b/_config.yml
@@ -2,20 +2,20 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: Programming Group # the website title (if blank, full name will be used instead)
-first_name:
-middle_name:
-last_name: Programming Group
-email: guido.salvaneschi@unisg.ch
+title: Søren Knudsen, PhD, MSc Eng. | Assistant Professor at the Digital Design Department, IT University of Copenhagen
+first_name: Søren
+middle_name: 
+last_name: Knudsen
+email: soekn@itu.dk
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  The Programming Group at the University of St. Gallen and at the Technical University of Darmstadt.
+  Personal academic website for Søren Knudsen. Assistant Professor at the Digital Design Department, IT University of Copenhagen.
 footer_text: >
 #  Powered by <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
 #  Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
 #  Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>.
 
-url: https://programming-group.com # the base hostname & protocol for your site
-baseurl: # the subpath of your site, e.g. /blog/
+url: https://sknudsen.github.io # the base hostname & protocol for your site
+baseurl: /sorenknudsen.com-test2 # the subpath of your site, e.g. /blog/
 last_updated: true # set to true if you want to display last updated in the footer
 impressum_path: /impressum # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
 future: true # Also render sites which are dated in the future
